<resources id="res_home">
    <string name="app_name">RGU Weather App</string>

    <string name="tv_home_location">Enter a Location</string>
    <string name="tv_home_days">How many days in advance?</string>
    <string name="tv_home_get_forecast">Get a forecast of your current location</string>
    <string name="tv_finder_filter">Please Filter Your Location</string>

    <string name="et_home_location">Click to enter a location</string>
    <string name="et_home_days">Click to choose days ahead</string>

    <string name="btn_home_get_forecast">Get Forecast</string>
    <string name="btn_home_get_gps">Get GPS</string>
    <string name="btn_finder_get">GET FORECAST</string>
</resources>